# monitoring_example

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  targets_200  targets_400  targets_500
prometheus/: prometheus.yml
